<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/textTab2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/tab_text_2"
        android:textSize="25sp" />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:id="@+id/radioButton"
            android:text="@string/radioButton" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:id="@+id/radioButton2"
            android:text="@string/radioButton2"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:id="@+id/radioButton3"
            android:text="@string/radioButton3"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:id="@+id/radioButton4"
            android:text="@string/radioButton4"/>
    </RadioGroup>
</android.support.constraint.ConstraintLayout>