<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/textTab3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/tab_text_3"
        android:textSize="25sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="55dp">

        <RadioButton
            android:id="@+id/diningOption"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:text="@string/diningOption" />

        <RadioButton
            android:id="@+id/diningOption2"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:text="@string/diningOption2" />

        <RadioButton
            android:id="@+id/diningOption3"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:text="@string/diningOption3" />

    </RadioGroup>

</android.support.constraint.ConstraintLayout>