<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreen">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/title_home" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="255dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/show_icon"
        android:text="@string/button"
        android:textSize="32sp"
        android:textColor="#F00"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="255dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/food_background"
        android:text="@string/button2"
        android:textSize="32sp" />

</RelativeLayout>